--- a/man3/SBO::Lib::Info.3
+++ b/man3/SBO::Lib::Info.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Prickle-Prickle, Chaos 14, 3191 YOLD" "" "sbotools 3.4"
+.TH SBO::Lib::Info 3 "Boomtime, Chaos 17, 3191 YOLD" "" "sbotools 3.4"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -78,7 +78,7 @@ SBO::Lib::Info \- Utilities to get data from SBo info files.
 .Ve
 .PP
 \&\f(CWcheck_x32()\fR returns a true value if the SlackBuild in \f(CW$location\fR considers
-64bit builds \f(CW\*(C`UNTESTED\*(C'\fR or \f(CW\*(C`UNSUPPORTED\*(C'\fR. Otherwise, it returns a false value.
+64\-bit builds \f(CW\*(C`UNTESTED\*(C'\fR or \f(CW\*(C`UNSUPPORTED\*(C'\fR. Otherwise, it returns a false value.
 .SS get_download_info
 .IX Subsection "get_download_info"
 .Vb 2
