--- a/man3/SBO::Lib::Download.3
+++ b/man3/SBO::Lib::Download.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Download 3"
-.TH SBO::Lib::Download 3 "Prickle-Prickle, Chaos 14, 3191 YOLD" "" "sbotools 3.4"
+.TH SBO::Lib::Download 3 "Boomtime, Chaos 17, 3191 YOLD" "" "sbotools 3.4"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -137,7 +137,7 @@ in location \f(CW$loc\fR, returning them in a hash reference.
 \&  my $symlink = get_symlink_from_filename($path, $loc);
 .Ve
 .PP
-\&\f(CWget_symlink_from_filename()\fR, given a (source) file at \f(CW$path\fR and a location \f(CW$loc\fR,
+\&\f(CWget_symlink_from_filename()\fR, given a source file at \f(CW$path\fR and a location \f(CW$loc\fR,
 returns the path of the generated symlink.
 .SS verify_distfile
 .IX Subsection "verify_distfile"
