--- a/man3/SBO::Lib::Pkgs.3
+++ b/man3/SBO::Lib::Pkgs.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Pkgs 3"
-.TH SBO::Lib::Pkgs 3 "Prickle-Prickle, Chaos 14, 3191 YOLD" "" "sbotools 3.4"
+.TH SBO::Lib::Pkgs 3 "Boomtime, Chaos 17, 3191 YOLD" "" "sbotools 3.4"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -108,8 +108,8 @@ prevent conflicting installations from the CPAN and SlackBuilds.
 matching the specified \f(CW$type\fR. The available types are \f(CW\*(C`STD\*(C'\fR for non-SBo packages,
 \&\f(CW\*(C`SBO\*(C'\fR for in-tree _SBo packages, \f(CW\*(C`DIRTY\*(C'\fR for out-of-tree _SBo packages and \f(CW\*(C`ALL\*(C'\fR for all.
 .PP
-The returned array reference will hold a list of hash references representing
-the names, versions, and full installed package names of the returned packages.
+The returned array reference holds a list of hash references representing
+the names, versions and full installed package names of the returned packages.
 .SS get_local_outdated_versions
 .IX Subsection "get_local_outdated_versions"
 .Vb 1
