--- a/man3/SBO::Lib::Tree.3
+++ b/man3/SBO::Lib::Tree.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Tree 3"
-.TH SBO::Lib::Tree 3 "Prickle-Prickle, Chaos 14, 3191 YOLD" "" "sbotools 3.4"
+.TH SBO::Lib::Tree 3 "Boomtime, Chaos 17, 3191 YOLD" "" "sbotools 3.4"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -98,7 +98,7 @@ code does this currently.
 \&  my %locations = get_sbo_locations(@sbos);
 .Ve
 .PP
-\&\f(CW\*(C`get_sbo_locations\*(C'\fR finds all SlackBuilds in \f(CW@sbos\fR, returns a hash matching each
+\&\f(CW\*(C`get_sbo_locations\*(C'\fR finds all SlackBuilds in \f(CW@sbos\fR and returns a hash matching each
 package name to its location.
 .SS is_local
 .IX Subsection "is_local"
@@ -106,8 +106,8 @@ package name to its location.
 \&  my $bool = is_local($sbo);
 .Ve
 .PP
-\&\f(CWis_local()\fR checks whether the given \f(CW$sbo\fR is in the \f(CW\*(C`LOCAL_OVERRIDES\*(C'\fR or
-not. The return value is true if it is, and false if it is not.
+\&\f(CWis_local()\fR checks whether the given \f(CW$sbo\fR is in the \f(CW\*(C`LOCAL_OVERRIDES\*(C'\fR directory.
+The return value is true if it is, and false if it is not.
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
