--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Prickle-Prickle, Chaos 14, 3191 YOLD" "" "sbotools 3.4"
+.TH SBO::Lib::Util 3 "Boomtime, Chaos 17, 3191 YOLD" "" "sbotools 3.4"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -132,7 +132,7 @@ Returns 1 if so, and 0 otherwise.
 \&  my $kv = get_kernel_version();
 .Ve
 .PP
-\&\f(CWget_kernel_version()\fR checks the version of the running kernel, and returns
+\&\f(CWget_kernel_version()\fR checks the version of the running kernel and returns
 it in a format suitable for appending to a Slackware package version.
 .SS get_optional
 .IX Subsection "get_optional"
@@ -175,7 +175,7 @@ The program exits if the version is unsupported or if an error occurs.
 .Ve
 .PP
 \&\f(CWget_slack_branch()\fR returns the default git branch for the given Slackware
-version, if any. If the pulled repository does not have this branch, an onscreen
+version, if any. If the upstream repository does not have this branch, an onscreen
 message will appear.
 .SS idx
 .IX Subsection "idx"
