man*: Prefer simple present to 'will'

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -56,7 +56,7 @@ is
 .B
 TRUE\fR\
 \&, apparent downgrades are reported with \(lqdiffers\(rq, but
-will not be acted on by
+are not acted on by
 .B
 sboupgrade(1)
 (see
@@ -75,7 +75,7 @@ the
 option.
 .B
 sbocheck
-will perform
+performs
 .B
 gpg
 verification upon pulling the tree if
@@ -116,7 +116,7 @@ sbocheck\fR\
 If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
-\&, the script will exit with a diagnostic message.
+\&, the script exits with a diagnostic message.
 .SH OPTIONS
 .P
 .B
