--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -41,7 +41,7 @@ $TMP\fR\
 flag,
 .B
 sboclean
-will remove anything in the distfiles and/or
+removes anything in the distfiles and/or
 .I
 /tmp/SBo
 (or
@@ -67,7 +67,7 @@ must be specified for this script to do anything.
 If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
-\&, the script will exit with a diagnostic message.
+\&, the script exits with a diagnostic message.
 .SH OPTIONS
 .P
 .B
@@ -122,7 +122,7 @@ options for that SlackBuild only.
 Be interactive;
 .B
 sboclean
-will use confirmation prompts for each item that could be
+uses confirmation prompts for each item that could be
 removed.
 .SH EXIT CODES
 .P
