--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -38,7 +38,7 @@ and
 If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
-\&, the script will exit with a diagnostic message.
+\&, the script exits with a diagnostic message.
 .SH OPTIONS
 .P
 .B
@@ -57,7 +57,7 @@ Add (or clear with
 .B
 --clear\fR\
 \&) optional dependency requests for one or more
-scripts. The current optional dependencies will be displayed
+scripts. The current optional dependencies are displayed
 together with a prompt for adding or clearing.
 .RE
 .P
@@ -66,12 +66,12 @@ together with a prompt for adding or clearing.
 .RS
 Replace all existing optional dependency requests for
 one or more scripts. The current optional dependencies
-will be displayed together with a prompt for the new request
+are displayed together with a prompt for the new request
 list. If used with
 .B
 --clear\fR\
 \&, a confirmation prompt for clearing the optional
-dependencies will appear.
+dependencies appears.
 .RE
 .P
 .B
