--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -22,7 +22,7 @@ files and honors the contents of
 .B
 sbotools.hints(5)\fR\
 \&; any dependencies
-that are required by no other installed SlackBuilds will be eligible
+that are required by no other installed SlackBuilds are eligible
 for removal as well.
 .B
 sboremove
@@ -33,7 +33,7 @@ is called with the
 .B
 --alwaysask
 flag, the dependency requirements of other installed SlackBuilds
-will not be checked.
+are not checked.
 .P
 In all cases, this script prompts the user package-by-package
 before performing any removal operations. No option exists to enable
@@ -46,7 +46,7 @@ future.
 If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
-\&, the script will exit with a diagnostic message.
+\&, the script exits with a diagnostic message.
 .SH OPTIONS
 .P
 .B
