--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -108,7 +108,7 @@ sbocheck
 
 
 .RE
-The local repository will be saved to
+The local repository is saved to
 .I
 /usr/sbo/repo\fR\
 \&.
@@ -153,7 +153,7 @@ sets a custom git branch.
 To update the local repository, run
 .B
 sbocheck(1)\fR\
-\&. This will generate a report with potential version upgrades, SlackBuilds
+\&. This generates a report with potential version upgrades, SlackBuilds
 with incremented build numbers and out-of-tree SlackBuilds installed with
 the
 .I
@@ -167,7 +167,7 @@ sboupgrade --all
 
 
 .RE
-Build number increments will be ignored if
+Build number increments are ignored if
 .B
 BUILD_IGNORE
 is set to
