--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -135,7 +135,7 @@ In case of error, the first is the error message and the third is a true value.
 .PP
 If the user refuses the prompt to build \f(CW$sbo\fR, the first value is \f(CW\*(AqN\*(Aq\fR.
 .PP
-If \f(CW$sbo\fR is to be built, the first value is the commands that will be run
+If \f(CW$sbo\fR is to be built, the first value is the commands that would run
 in advance, or \f(CW$undef\fR if none. The second value contains build options.
 .PP
 \&\fBNote\fR: This should really be changed.
