--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -22,7 +22,7 @@ commands.
 If an invalid configuration is detected (or requested with
 .B
 sboconfig(1)\fR\
-), the script will exit with a diagnostic message.
+), the script exits with a diagnostic message.
 .P
 To quickly restore all default settings, run
 .RS
@@ -50,7 +50,7 @@ BUILD_IGNORE
 SlackBuild checks by
 .B
 sbocheck(1)
-are disabled, and previously-used build options will not be displayed.
+are disabled, and previously-used build options are not displayed.
 This provides a more traditional
 .B
 sbotools
@@ -74,7 +74,7 @@ SBO_HOME=/usr/sbo\fR\
 by default. If
 .B
 PKG_DIR
-is set, package archives will be saved there regardless of
+is set, package archives are saved there regardless of
 .B
 DISTCLEAN\fR\
 \&.
@@ -101,7 +101,7 @@ sboupgrade(1)\fR\
 \&. Missing public keys are detected, and a download from
 .UR keyserver.ubuntu.com
 .UE
-on port 80 will be offered if available.
+on port 80 is offered if available.
 Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .RE
 .P
@@ -176,7 +176,7 @@ PKG_DIR=(FALSE|/path)
 If set to a
 .B
 path\fR\
-\&, packages will be stored there after installation. This
+\&, packages are stored there after installation. This
 overrides the
 .B
 DISTCLEAN
@@ -192,7 +192,7 @@ path\fR\
 \&, this is where the
 .B
 slackbuilds.org
-tree will be stored. The default setting is
+tree is stored. The default setting is
 .I
 /usr/sbo\fR\
 \&. The tree must be re-downloaded with
@@ -211,16 +211,16 @@ If set to a
 .B
 path\fR\
 \&, any directory name in the top level under that path matching a
-SlackBuild name will be used in preference to the
-in-tree version. This will work even if the SlackBuild
+SlackBuild name is used in preference to the
+in-tree version. This works even if the SlackBuild
 is out-of-tree. Scripts installing packages not marked
 with the
 .I
 _SBo
-tag will not be upgradeable with
+tag are neither upgradeable with
 .B
 sboupgrade(1)
-or removable with
+nor removable with
 .B
 sboremove(1)\fR\
 \&.
@@ -299,7 +299,7 @@ STRICT_UPGRADES=(FALSE|TRUE)
 If set to
 .B
 TRUE\fR\
-\&, upgrades will only be attempted if the incoming
+\&, upgrades are only attempted if the incoming
 version or build number is greater. This has no
 effect on scripts in the local overrides directory.
 .RE
