--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -13,7 +13,7 @@ The
 /etc/sbotools/sbotools.hints
 file is used to blacklist scripts and request optional dependencies.
 .P
-If a script is blacklisted, it will neither be included in build queues nor
+If a script is blacklisted, it can neither be included in build queues nor
 removed by
 .B
 sboremove(1)\fR\
