--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -29,12 +29,12 @@ cd /usr/ports; make search name=$search_term display=name,path
 on a FreeBSD system. If the repository includes a
 .I
 TAGS.txt
-file, that will be used to find additional results.
+file, these tags are searched to generate additional results.
 .P
 If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
-\&, the script will exit with a diagnostic message.
+\&, the script exits with a diagnostic message.
 .SH OPTIONS
 .P
 .B
