README.md formatting, proper SlackBuilds.org capitalization.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -5,7 +5,7 @@
 sbocheck
 - update a local
 .B
-slackbuilds.org
+SlackBuilds.org
 tree and check for updates
 .SH SYNOPSIS
 .P
@@ -18,7 +18,7 @@ sbocheck [-g|-n]
 sbocheck
 first updates or fetches a copy of the
 .B
-slackbuilds.org
+SlackBuilds.org
 tree, checks for available upgrades, and reports what it finds.
 SlackBuilds with differing build numbers are reported separately,
 as are any SlackBuilds marked
