--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -255,7 +255,7 @@ SBO_HOME\fR\
 path\fR\
 \&, this is where the
 .B
-slackbuilds.org
+SlackBuilds.org
 tree is stored. The default setting is
 .I
 /usr/sbo\fR\
@@ -308,7 +308,7 @@ SLACKWARE_VERSION\fR\
 version number\fR\
 \&, use the
 .B
-slackbuilds.org
+SlackBuilds.org
 repository for that version of Slackware rather than
 the one specified in
 .I
