--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -5,14 +5,14 @@
 sbotools
 - Perl scripts providing a ports-like interface to
 .B
-slackbuilds.org
+SlackBuilds.org
 .SH DESCRIPTION
 .P
 .B
 sbotools
 is a set of Perl scripts that collectively provide a ports-like interface to
 .B
-slackbuilds.org\fR\
+SlackBuilds.org\fR\
 \&. Each tool is documented in its own man page.
 .P
 .B
