--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -215,7 +215,7 @@ sbotools.conf(5)\fR\
 Force an upgrade, even if the installed version and
 build number are equal to the
 .B
-slackbuilds.org
+SlackBuilds.org
 version.
 .RE
 .P
