--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -191,7 +191,7 @@ If set to a
 path\fR\
 \&, this is where the
 .B
-slackbuilds.org
+SlackBuilds.org
 tree is stored. The default setting is
 .I
 /usr/sbo\fR\
@@ -244,7 +244,7 @@ If set to a
 version number\fR\
 \&, use the
 .B
-slackbuilds.org
+SlackBuilds.org
 repository for that version of Slackware rather than
 the one specified in
 .I
