--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -29,7 +29,7 @@ Blacklist entries supersede optional dependency requests.
 .P
 Many scripts on
 .B
-slackbuilds.org
+SlackBuilds.org
 have optional dependencies. To make
 .B
 sbotools
