--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Prickle-Prickle, Chaos 14, 3191 YOLD" "sbotools 3.4" sbotools
+.TH sbotools.conf 5 "Boomtime, Chaos 22, 3191 YOLD" "sbotools 3.4" sbotools
 .SH NAME
 .P
 .B
