--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,4 +1,4 @@
-.TH sboconfig 1 "Prickle-Prickle, Chaos 14, 3191 YOLD" "sbotools 3.4" sbotools
+.TH sboconfig 1 "Boomtime, Chaos 22, 3191 YOLD" "sbotools 3.4" sbotools
 .SH NAME
 .P
 .B
