--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -171,7 +171,7 @@ DISTCLEAN\fR\
 .B
 TRUE\fR\
 \&, then remove the package and source archives after building. Source
-archives are otherwise retained in
+archives are otherwise retained in md5sum-designated directories under
 .I
 /usr/sbo/distfiles
 (with default
