--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -163,7 +163,7 @@ If
 .B
 TRUE\fR\
 \&, then remove the source archives after building. They
-are retained in
+are retained in md5sum-designated directories under
 .I
 SBO_HOME/distfiles
 by default. The package archive (in
