--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -64,7 +64,7 @@ If
 .B
 TRUE\fR\
 \&, then remove the package and source archives after building. Source
-archives are otherwise retained in
+archives are otherwise retained in md5sum-designated directories under
 .I
 /usr/sbo/distfiles
 (with
