--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,6 +1,7 @@
 sbotools
 * Post-Release
   * Bugfix: Use md5sum-specific subdirectories for distfiles to avoid improper overwriting
+  * sboclean: Adjust distfile handling to reflect new directory structure
 
 * 3.4 - 2025-01-22
   * sboconfig: Run without flags or options to use an interactive menu
