--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -1,4 +1,4 @@
-.TH sbohints 1 "Setting Orange, Chaos 5, 3191 YOLD" "sbotools 3.4" sbotools
+.TH sbohints 1 "Prickle-Prickle, Chaos 29, 3191 YOLD" "sbotools 3.4.1" sbotools
 .SH NAME
 .P
 .B
