--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -1,4 +1,4 @@
-.TH sboremove 1 "Boomtime, Chaos 22, 3191 YOLD" "sbotools 3.4" sbotools
+.TH sboremove 1 "Prickle-Prickle, Chaos 29, 3191 YOLD" "sbotools 3.4.1" sbotools
 .SH NAME
 .P
 .B
