Build.pm: Do not clean distfiles if they are needed later.

--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -240,15 +240,11 @@ in principle. As a best practice,
 should be combined with
 .B
 --noinstall
+and
+.B
+--distclean FALSE
 so that the contents of the package can be inspected prior
-to installation. If the base package and compat32 package
-are to be built at the same time, ensure that the
-.B
-DISTCLEAN
-option is set to
-.B
-FALSE.
-GitHub Issues are welcome in case of unexpected failure.
+to installation. GitHub Issues are welcome in case of unexpected failure.
 .RE
 .P
 .B
