sbohints: query reports optional dependendees; grammar

--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -111,7 +111,9 @@ user is notified.
 -q|--query
 .RS
 Return the current blacklist and optional dependency request
-status for one or more scripts.
+status for one or more scripts. There is no output unless the
+queried script is blacklisted, has optional dependency
+requests or is on an optional dependency request list.
 .RE
 .P
 .B
