--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -74,7 +74,7 @@ exports. Each module is documented in its own man page.
 .SS SBO::Lib::Build
 .IX Subsection "SBO::Lib::Build"
 \&\f(CW\*(C`Build.pm\*(C'\fR has routines for building Slackware packages from SlackBuilds.org. It covers
-the build process from the point the queue is set through post-build cleaning.
+the build process from setting the queue through post-build cleaning.
 .SS SBO::Lib::Download
 .IX Subsection "SBO::Lib::Download"
 \&\f(CW\*(C`Download.pm\*(C'\fR downloads, verifies and symlinks any needed source files before building the
