--- a/man3/SBO::Lib::Build.3
+++ b/man3/SBO::Lib::Build.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Build 3"
-.TH SBO::Lib::Build 3 "Prickle-Prickle, Chaos 29, 3191 YOLD" "" "sbotools 3.4.1"
+.TH SBO::Lib::Build 3 "Setting Orange, Chaos 30, 3191 YOLD" "" "sbotools 3.4.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -289,6 +289,23 @@ a string. The second return value is the exit status.
 .PP
 If the bash interpreter cannot be run, the first return value is \f(CW\*(C`undef\*(C'\fR and
 the exit status holds a non-zero value.
+.SH "EXIT CODES"
+.IX Header "EXIT CODES"
+Build.pm subroutines can return the following exit codes:
+.PP
+.Vb 8
+\&  _ERR_SCRIPT        2   script or module bug
+\&  _ERR_BUILD         3   errors when executing a SlackBuild
+\&  _ERR_OPENFH        6   failure to open file handles
+\&  _ERR_NOMULTILIB    9   lacking multilib capabilities when needed
+\&  _ERR_CONVERTPKG    10  convertpkg\-compat32 failure
+\&  _ERR_NOCONVERTPKG  11  lacking convertpkg\-compat32 when needed
+\&  _ERR_INST_SIGNAL   12  the script was interrupted while building
+\&  _ERR_CIRCULAR      13  attempted to calculate a circular dependency
+.Ve
+.SH "SEE ALSO"
+.IX Header "SEE ALSO"
+\&\fBSBO::Lib\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Readme\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBSBO::Lib::Util\fR\|(3)
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
