--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Readme 3"
-.TH SBO::Lib::Readme 3 "Prickle-Prickle, Chaos 29, 3191 YOLD" "" "sbotools 3.4.1"
+.TH SBO::Lib::Readme 3 "Setting Orange, Chaos 30, 3191 YOLD" "" "sbotools 3.4.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -143,6 +143,18 @@ in advance, or \f(CW$undef\fR if none. The second value contains build options.
 \&\fBNote\fR: The previous note is old. I (KEC) agree that this module is asked to do
 quite a lot. Keeping it in place might be the most parsimonious thing to do, but I
 have yet to look into the question closely.
+.SH "EXIT CODES"
+.IX Header "EXIT CODES"
+Readme.pm subroutines can return the following exit codes:
+.PP
+.Vb 3
+\&  _ERR_USAGE         1   usage errors
+\&  _ERR_SCRIPT        2   script or module bug
+\&  _ERR_OPENFH        6   failure to open file handles
+.Ve
+.SH "SEE ALSO"
+.IX Header "SEE ALSO"
+\&\fBSBO::Lib\fR\|(3), \fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBSBO::Lib::Util\fR\|(3)
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
