--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -64,7 +64,10 @@ or
 --option
 must be specified for this script to do anything.
 .P
-If an invalid configuration is detected in
+Root privileges are required to run
+.B
+sboclean\fR\
+\&. If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
 \&, the script exits with a diagnostic message.
