--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -112,7 +112,10 @@ TRUE\fR\
 \&.
 Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .P
-If an invalid configuration is detected in
+Root privileges are required to run
+.B
+sboinstall\fR\
+\&. If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
 \&, the script exits with a diagnostic message.
