--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -43,7 +43,10 @@ to uninstall packages without confirmation prompts,
 and there are no plans to add that functionality in the
 future.
 .P
-If an invalid configuration is detected in
+Root privileges are required to run
+.B
+sboremove\fR\
+\&. If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
 \&, the script exits with a diagnostic message.
